syntax = "proto3";

package schema;

message User {
    uint64 id = 1;
    string created_at = 2;
    string name = 3;
    optional string email = 4;
    optional string display_name = 5;
    string password_hash = 6;
    optional string updated_at = 7;
}
